--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -3,4 +3,4 @@ silent: false
 branchName: "issue-${issue.number}/${issue.title,}"
 gitSafeReplacementChar: '-'
 autoCloseIssue: true
-
+openDraftPR: true
