--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -4,3 +4,4 @@ branchName: "issue-${issue.number}/${issue.title,}"
 gitSafeReplacementChar: '-'
 autoCloseIssue: true
 openDraftPR: true
+copyIssueAssigneeToPR: true
