--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -42,6 +42,10 @@
   color: "e4e669"
   description: This doesn't seem right
 
+- name: 🧁 needs baking
+  color: "cbf26f"
+  description: Requires more time for consideration or development before further action
+
 - name: 📝 needs docs
   color: "7c8f99"
   description: Indicates a feature or change that requires documentation
