--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,3 +1,7 @@
+- name: 🛑 blocked
+  color: "be222a"
+  description: Progress is blocked due to external dependencies or obstacles
+  
 - name: 🚨 breaking
   color: "ff4343"
   description: Breaking changes
@@ -90,7 +94,7 @@
   color: "bfd4f2"
   description: General explanation of a feature written from the perspective of an end user
 
-- name: 🛑 wontfix
+- name: ⛔ wontfix
   color: "ffffff"
   description: This will not be worked on
 
